--- a/student_bio.html
+++ b/student_bio.html
@@ -20,9 +20,9 @@
         <div>
             <h1>Contact Info</h1>
                 <ul>
-                    <li>Phone: (205) 704 8236</li>
-                    <li><a mailto:"heenanrobby@gmail.com">Email: heenanrobby@gmail.com</a></li>
-                    <li>portfolie: coming soon</li>
+                    <li>Github:<a href="https://github.com/Surrealinsomniac">Surrealinsomniac</a></li>
+                    <li>Email:<a mailto:"heenanrobby@gmail.com">heenanrobby@gmail.com</a></li>
+                    <li>portfolio: coming soon</li>
                 </ul>
         </div>
     </body>
