--- a/student_bio.html
+++ b/student_bio.html
@@ -3,23 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Student Bio</title>
-
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
-        <div>
+        <div class="title">
             <h1>Student Bio</h1>
             <h2>Robby Heenan</h2>
         </div>
 
-        <div>
+        <div class="type">
             <p>My name is Robby Heenan. I am 23 years old. I am originally from Northern Virginia, a little ways outside of D.C. However, I've most recently lived in Birmingham, Alabama for several years before moving to Cumming to attend this bootcamp</p>
             <p>My hobbies include playing videogames, my favorite is Overwatch; playing lacrosee; watching movies; and most of all writting code</p>
         </div>
 
-        <div>
+        <div class="info">
             <h1>Contact Info</h1>
-                <ul>
+                <ul class="details">
                     <li>Github:<a href="https://github.com/Surrealinsomniac">Surrealinsomniac</a></li>
                     <li>Email:<a mailto:"heenanrobby@gmail.com">heenanrobby@gmail.com</a></li>
                     <li>portfolio: coming soon</li>
